@@ -1,6 +1,8 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.001001
+ [Added / runtime requires]
+ - constant
 
 1.001000 2014-08-18T21:14:28Z
  [Added / develop requires]
